Fix for beta 4. (No more optionals in string formatting.)
Oddly, I’m no longer able to set breakpoints or
receive errors from the actual keyboard process
in beta 4. My plugin was simply crashing with
"process blah.blah.blah interrupted". Had to figure
out the problem manually.

--- a/Keyboard/TODO.txt
+++ b/Keyboard/TODO.txt
@@ -38,3 +38,11 @@ next up:
 later:
 * keyboard layout language
 * iPad version
+
+
+potential bugs:
+    used to be that you could use optional values in strings as "\(opt)"; now you have to use !
+
+
+    func snapshotViewAfterScreenUpdates(afterUpdates: Bool) -> UIView!
+    func resizableSnapshotViewFromRect(rect: CGRect, afterScreenUpdates afterUpdates: Bool, withCapInsets capInsets: UIEdgeInsets) -> UIView! // 
